2017-09-28  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/options.js:
	Change save button behavior. This button save the options to
	storage.sync.

	* tryXpath/background/try_xpath_background.js:
	Fix loading css.

	* tryXpath/pages/options.js:
	Change save button behavior.

	* tryXpath/background/try_xpath_background.js:
	Modify this file. The css is loaded from storage.sync when the
	background script is loaded.

2017-09-24  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Remove loadCss function.
	Copy loadDefaultCss function.

	* tryXpath/pages/options.js:
	Define loadDefaultCss function.

2017-09-23  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.changeOptions function.

	* tryXpath/pages/options.js:
	Add a feature which save the options.

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.loadOptions function.

	* tryXpath/pages/options.js:
	Modify this file to load the options when window is loaded.

	* tryXpath/pages/options.html:
	Create this file.

	* tryXpath/pages/options.js:
	Create this file.

	* tryXpath/scripts/try_xpath_content.js:
	Define classes variable.
	Remove variables. elemClass, contextClass, focusedClass,
	focusedAncestorClass.

	* tryXpath/background/try_xpath_background.js:
	Define classes variable.
	Define genericListener.listeners.loadClasses function.

2017-09-22  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define cssInserted variable.
	Define genericListener.listeners.finishInsertCss function.

	* tryXpath/manifest.json:
	Add "activeTab" to permissions property.

	* tryXpath/scripts/try_xpath_content.js:
	Modify genericListener.listeners.execute function. This function
	send "insertCss" event.

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.insertCss function.

	* tryXpath/manifest.json: