@@ -1,5 +1,10 @@
 2017-09-28  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/background/try_xpath_background.js:
+	Remove genericListener.listeners.changeOptions function.
+	Add a listener to chrome.storage.onChanged to change classes and
+	css values.
+
 	* tryXpath/pages/options.js:
 	Change save button behavior. This button save the options to
 	storage.sync.
